@@ -1,4 +1,5 @@
 title: project-geografi-title
+screencast: /static/video/kartfesting.mp4
 image: geografi.jpg
 description: project-geografi-description
 georeference: true
