@@ -1,6 +1,8 @@
-2017-10-16: Screencast-støtte (dugnad)
+2017-10-31: Ny instruksjonsvideo (kartfesting)
+2017-10-24: Prioritering av objekter uten koordinater (kartfesting)
+2017-10-16: Støtte for instruksjonsvideoer (dugnad)
 2017-10-15: Innloggede brukere kan revidere de 10 siste transkripsjonene sine (dugnad)
-2017-10-14: Forberedelser til nytt prosjekt – Fossildugnad! (dugnad)
+2017-10-14: Forberedelser til fossildugnad! (dugnad)
 2017-08-06: En del endringer bak forhenget, og et nytt prosjekt – Kartfesting av Karplanter fra Telemark (dugnad)
 2017-05-18: Nytt design på forside og prosjektsider (dugnad)
 2017-05-10: Oversiktsside for hvert prosjekt (dugnad)
